--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { git = "https://github.com/tokio-rs/axum.git", rev = "c8cf147657093bff3aad5cbf2dafa336235a37c6" }
+tokio = { version = "1.32", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
