--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ publish = false
 [dependencies]
 askama = "0.12"
 axum = { git = "https://github.com/tokio-rs/axum.git", rev = "c8cf147657093bff3aad5cbf2dafa336235a37c6" }
+bb8 = "0.8"
+bb8-postgres = "0.8"
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.32", features = ["full"] }
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
