--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,34 @@
 version: "3.9"
 services:
   web:
+    container_name: "rustwi-web"
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
       - 8080:8080
     tty: true
+    depends_on:
+      db:
+        condition: service_healthy
   db:
+    container_name: "rustwi-db"
     image: "postgres:15-alpine"
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
+      - POSTGRES_HOST_AUTH_METHOD
+    volumes:
+      - ./database/store:/var/lib/postgresql/data
+      - ./database/setup:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+
+volumes:
+  database:
+    driver: local
