fix: docker configuration files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,6 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 8080:8080
-    tty: true
     depends_on:
       db:
         condition: service_healthy
@@ -18,17 +17,13 @@ services:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
       - POSTGRES_DB
-      - POSTGRES_HOST_AUTH_METHOD
+    ports:
+      - 5432:5432
     volumes:
-      - ./database/store:/var/lib/postgresql/data
-      - ./database/setup:/docker-entrypoint-initdb.d
+      - ./database:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: always
-
-volumes:
-  database:
-    driver: local
