--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bb8 = "0.8"
 bb8-postgres = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
+mockall = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.32", features = ["full"] }
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
